--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-  <h1>CSS3 animated <span>spinners</span> vol.2</h1>
+  <h1>CSS3 animated spinners</h1>
    
   <!-- spinners container-->
   <div class="spinners-container">
